<resources>
    <string name="app_name">ClickPark</string>
    <string name="va_una_imagen">Image</string>
    <string name="Email">Email</string>
    <string name="Contraseña">Contraseña</string>
    <string name="inicio_sesion">Iniciar Sesión</string>
    <string name="registro">Registrarse</string>
    <string name="contra_olvidada">¿Has olvidado la contraseña?</string>
    <string name="Crear_cuenta">CREAR UNA CUENTA</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Confirmar_Contra">Confirmar contraseña</string>
    <string name="boton_crear_cuenta">Crear</string>
    <string name="Seleccionar">SELECCIONAR </string>
    <string name="Tipo_vehiculo">TIPO DE VEHÍCULO</string>
    <string name="buscar">BUSCAR </string>
    <string name="lista">LISTA </string>
    <string name="parking">PARKING</string>
    <string name="parkings">PARKINGS</string>
    <string name="UPS">UPS! </string>
    <string name="Elparking">EL PARKING</string>
    <string name="Estacompleto">ESTÁ COMPLETO</string>
    <string name="new_passsword">INTRODUZCA LA NUEVA CONTRASEÑA</string>
    <string name="restablecer">Restablecer contraseña</string>
    <string name="condiciones">He leído y acepto los Términos  de Servicio y Política de Privacidad</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_parking">BUSCAR PARKING</string>
    <string name="parking_list">LISTA PARKINGS</string>
    <string name="favs">FAVORITOS</string>
    <string name="mis_reservas">MIS RESERVAS</string>
    <string name="close_session">CERRAR SESIÓN</string>
    <string name="consult_map">CONSULTAR MAPA</string>
    <string name="perfil">PERFIL</string>
    <string name="irperfil">IR A PERFIL</string>
    <string name="tiquet">TIQUET</string>
    <string name="escoger">ESCOGER</string>
    <string name="planta">PLANTA</string>
    <string name="plantas">PLANTAS</string>
    <string name="plazas">PLAZAS</string>
    <string name="Disponibles">DISPONIBLES: </string>
    <string name="Disponible">DISPONIBLES </string>
    <string name="Ocupadas">OCUPADAS: </string>
    <string name="VerPlantas">VER PLANTAS </string>
    <string name="VerPlazas">VER PLAZAS </string>
    <string name="VerEnMapa">VER EN MAPA</string>
    <string name="Catalunya">CATALUNYA</string>
    <string name="Sescelades">SESCELADES</string>
    <string name="Bellisens">BELLISSENS</string>
    <string name="Espacio"> </string>
    <string name="plazaAsignada">Su plaza asignada es:</string>
    <string name="qr">GENERAR QR</string>
    <string name="tituloQr">QR</string>
    <string name="volverAlMenu">VOLVER AL MENÚ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
