<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlazaAsignadaCatActivity">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/va_una_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo_pantalla" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/va_una_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/linea_discontinua"
        android:layerType="software"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/plazas"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTaronja"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Catalunya"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/linea_discontinua"
        android:layerType="software"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/plazaAsignada"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/plaza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8"
        app:layout_constraintVertical_bias="0.315" />

    <TextView
        android:id="@+id/plaza"
        android:layout_width="128dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="332dp"
        android:text="TextView"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/vermapa"
        android:layout_width="95dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_rounded_border"
        android:text="@string/VerEnMapa"
        android:textColor="@color/colorTaronja"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plaza"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="80dp" />

    <Button
        android:id="@+id/QR"
        android:layout_width="95dp"
        android:layout_height="42dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_rounded_border"
        android:text="@string/qr"
        android:textColor="@color/colorTaronja"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/vermapa"
        app:layout_constraintTop_toBottomOf="@+id/plaza"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="80dp" />

</android.support.constraint.ConstraintLayout>